compile_errors.log
./SC2002/Project/control/persistence/CSVReader.java:506: error: cannot find symbol
                            app.setManager(project.getManager());
                               ^
  symbol:   method setManager(HDB_Manager)
  location: variable app of type BTOApplication
./SC2002/Project/control/persistence/CSVReader.java:517: error: cannot find symbol
                                    if (project.getManager() != null && app.getManager() == null) {
                                                                           ^
  symbol:   method getManager()
  location: variable app of type BTOApplication
./SC2002/Project/control/persistence/CSVReader.java:518: error: cannot find symbol
                                        app.setManager(project.getManager());
                                           ^
  symbol:   method setManager(HDB_Manager)
  location: variable app of type BTOApplication
./SC2002/Project/control/persistence/CSVReader.java:547: error: cannot find symbol
                                if (project.getManager() != null && app.getManager() == null) {
                                                                       ^
  symbol:   method getManager()
  location: variable app of type BTOApplication
./SC2002/Project/control/persistence/CSVReader.java:548: error: cannot find symbol
                                    app.setManager(project.getManager());
                                       ^
  symbol:   method setManager(HDB_Manager)
  location: variable app of type BTOApplication
5 errors
